<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--        Select category-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_select_category"
                android:textColor="@color/dark_blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_view_all"
                android:textColor="@color/orange"
                android:textSize="15sp" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

        <!--        Search-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/view_circle_white"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="15dp"
                android:hint="@string/str_search"
                android:paddingStart="25dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/ll_qr_code"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginEnd="37dp"
                android:background="@drawable/view_circle_brown"
                android:gravity="center">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_qr_code_24" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--        Hot sales-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_hot_sales"
                    android:textColor="@color/dark_blue"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/str_see_more"
                    android:textColor="@color/orange"
                    android:textSize="15sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_homeStore"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:scrollbars="none" />

            <!--        Best seller-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_best_seller"
                    android:textColor="@color/dark_blue"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_see_more2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_see_more"
                    android:textColor="@color/orange"
                    android:textSize="15sp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_bestSeller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>