<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp"
    android:layout_marginHorizontal="10dp"
    android:backgroundTint="#101010"
    android:background="#101010"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:translationZ="90dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/ll_isNew"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/view_circle_brown"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_isNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_new"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:translationZ="90dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:gravity="start|center">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:text="@string/str_iphone12"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="5dp"
                android:text="@string/str_super_mega"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:translationZ="90dp"
            android:gravity="bottom">

            <Button
                android:id="@+id/b_isBuy"
                android:translationZ="90dp"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/view_buy_now"
                android:text="@string/str_buy_now"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:background="#101010"
            android:backgroundTint="#101010"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end">

            <ImageView
                android:id="@+id/iv_picture"
                android:layout_marginEnd="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/iv_iphone" />

        </LinearLayout>

    </FrameLayout>

</androidx.cardview.widget.CardView>