<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.CartFragment">

    <!--        Top part-->
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_back_arrow"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:background="@drawable/view_dark_blue"
            android:gravity="center">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_baseline_arrow_back_white" />

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/str_add_address"
            android:textColor="@color/dark_blue"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:background="@drawable/view_brown_rounded"
            android:gravity="center">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/im_location2" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="50dp"
        android:text="@string/str_my_cart"
        android:textColor="@color/dark_blue"
        android:textSize="35sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="-30dp"
        android:background="@color/dark_blue"
        android:backgroundTint="@color/dark_blue"
        android:elevation="4dp"
        app:cardCornerRadius="30dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="80dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:background="@color/white" />

                <!--                Total-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_total"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="35dp"
                        android:gravity="end"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <!--                Delivery-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_delivery"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="35dp"
                        android:gravity="end"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:layout_marginTop="26dp"
                    android:background="@color/white" />

                <Button
                    android:id="@+id/b_checkout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="44dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="44dp"
                    android:background="@drawable/view_brown_rounded"
                    android:text="@string/str_checkout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>